--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "paystack": "^2.0.1"
+    "paystack": "^2.0.1",
+    "qrcode": "^1.5.4"
   }
 }
